# break-fun

./: .gitignore
break-agent/: _app.py  db.sqlite3  manage.py  pyproject.toml
break-agent/agents/: models.py  solana.py  urls.py  views.py
break-agent/agents/_agent/: _prompts.py  chat.py
break-agent/agents/management/commands/: cleanup_duplicate_users.py
break-agent/agents/migrations/: 0001_initial.py  0002_alter_agent_private_key.py  0003_alter_user_wallet_address.py
break-agent/break_agent/: asgi.py  settings.py  urls.py  wsgi.py
break-frontend/: PRD.md
break-frontend/frontend/: package-lock.json  package.json  vite.config.ts
break-frontend/frontend/src/: App.tsx  config.ts  theme.ts
break-frontend/frontend/src/components/: Layout.tsx  TestAPI.tsx
break-frontend/frontend/src/pages/: Agents.tsx  Challenge.tsx  Challenges.tsx  CreateAgent.tsx  CreateChallenge.tsx  Home.tsx  Leaderboard.tsx  Profile.tsx  TestAPI.tsx
break-frontend/frontend/src/routes/: AppRouter.tsx
break-frontend/frontend/src/services/: agent.ts  challenges.ts  wallet.ts
