[project]
name = "break-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "django-cors-headers>=4.6.0",
    "django>=5.1.4",
    "gradio>=5.9.1",
    "openai>=1.58.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "solana>=0.36.1",
    "solders>=0.23.0",
]
